2010-04-09  EFI Coder <eficoder@hotmail.com>

	* normal/menu_text.c (print_message): Clean up the message and show
	the Fn information when on EFI
	* term/efi/console.c (grub_console_checkkey): Add F4 support.

2010-04-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* normal/autofs.c (read_fs_list): New parameter 'prefix'.
	All users updated.
	* normal/crypto.c (read_crypto_list): Likewise.
	* normal/dyncmd.c (read_command_list): Likewise.
	* normal/term.c (read_terminal_list): Likewise.
	* normal/main.c (read_lists): Use explicit prefix.
	(read_lists_hook): Use read_lists.
	(grub_normal_execute): Likewise.

2010-04-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Fix incorrect path in coreboot part.
	Reported by: Thomas Schmitt.
	Add -no-emul-boot to grub-mkisofs parameters.

2010-04-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* font/font.c: Indented.

2010-04-09  BVK Chaitanya  <bvk.groups@gmail.com>

	Elif support to GRUB script (by Deepak Vankadaru).

	* tests/grub_script_if.in: New testcase.
	* conf/tests.rmk: Rule for new testcase.
	* script/parser.y: Grammar rules for elif.

2010-04-09  BVK Chaitanya  <bvk.groups@gmail.com>

	While and until loops support to GRUB script.

	* include/grub/script_sh.h (grub_script_cmdwhile): New struct.
	(grub_script_create_cmdwhile): New function prototype.
	(grub_script_execute_cmdwhile): New function prototype.
	* script/execute.c (grub_script_execute_cmdwhile): New function.
	* script/parser.y (command): New commands.
	(whilecmd): New grammar rule.
	(untilcmd): New grammar rule.
	* script/script.c (grub_script_create_cmdwhile): New function.
	* util/grub-script-check.c (grub_script_execute_cmdwhile): New
	function.

	* tests/grub_script_while1.in: New testcase.
	* conf/tests.rmk: Rule for new testcase.

2010-04-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/00_header.in: Add few missing quotes. Recognise *.jpeg
	as *.jpg.

2010-04-09  Mario Vazquez <mariovazq@gmail.com>
