@@ -1,3 +1,7 @@
+2010-04-09  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* term/efi/console.c (grub_console_checkkey): Macroify key contants.
+
 2010-04-09  EFI Coder <eficoder@hotmail.com>
 
 	* normal/menu_text.c (print_message): Clean up the message and show
